--- a/bgreference/Dockerfile
+++ b/bgreference/Dockerfile
@@ -27,7 +27,10 @@ remote_repository = \"https://bbglab.irbbarcelona.org/bgdata\"\n\
 [cache_repositories]" > /home/user/.config/bbglab/bgdatav2.conf
 
 
-RUN bgdata get datasets/genomereference/hg38 && bgdata get datasets/genomereference/mm10
-RUN python3 -c "from bgreference import hg38, mm10; hg38(1, 1300000, 3000); mm10(1, 1300000, 3000)"
+RUN bgdata get datasets/genomereference/hg38
+RUN bgdata get datasets/genomereference/mm10
+RUN bgdata get datasets/genomereference/mm39
+
+RUN python3 -c "from bgreference import hg38, mm10, mm39; hg38(1, 1300000, 3000); mm10(1, 1300000, 3000); mm39(1, 1300000, 3000)"
 
 RUN chmod -R 777 /bgdatacache/*
