update: omega for mm39 and rebuilt latest version
- omega commit: 2e7561d30c28597e6f56432f2f707de0e0e4b084

--- a/omega/Dockerfile
+++ b/omega/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10.12
 
 RUN apt-get update -y && \
     apt-get upgrade -y && \
-    apt-get install -y git libcurl4-openssl-dev
+    apt-get install -y git libcurl4-openssl-dev procps
 
 RUN mkdir -p /bgdatacache/ /home/user/.config/bbglab/
 
@@ -26,8 +26,11 @@ remote_repository = \"https://bbglab.irbbarcelona.org/bgdata\"\n\
 # Cache repositories\n\
 [cache_repositories]" > /home/user/.config/bbglab/bgdatav2.conf
 
-RUN bgdata get datasets/genomereference/hg38 && bgdata get datasets/genomereference/mm10 && bgdata get datasets/genomereference/hg19
-RUN python3 -c "from bgreference import hg38, mm10, hg19; hg38(1, 1300000, 3000); mm10(1, 1300000, 3000); hg19(1, 1300000, 3000)"
+RUN bgdata get datasets/genomereference/hg38 && bgdata get datasets/genomereference/hg19
+RUN bgdata get datasets/genomereference/mm39 && bgdata get datasets/genomereference/mm10
+
+RUN python3 -c "from bgreference import hg38, hg19; hg38(1, 1300000, 3000); hg19(1, 1300000, 3000)"
+RUN python3 -c "from bgreference import mm39, mm10; mm39(1, 1300000, 3000); mm10(1, 1300000, 3000)"
 
 RUN chmod -R 777 /bgdatacache/*
 
