revert oncodrivefml back to older branch

--- a/oncodrivefml/Dockerfile
+++ b/oncodrivefml/Dockerfile
@@ -35,5 +35,5 @@ RUN chmod -R 777 /bgdatacache/*
 
 RUN git clone https://bitbucket.org/bbglab/oncodrivefml.git && \
     cd oncodrivefml && \
-    git checkout dev/muts_n_depths && \
+    git checkout feature/mutability_n_depth && \
     pip install .
