--- a/expected_mutrate/mrate.yml
+++ b/expected_mutrate/mrate.yml
@@ -184,6 +184,7 @@ dependencies:
   - r-munsell=0.5.1=r43hc72bb7e_1
   - r-nlme=3.1_165=r43hbcb9c34_1
   - r-openssl=2.2.0=r43h5bbf899_1
+  - r-pheatmap=1.0.12=r43hc72bb7e_5
   - r-pillar=1.9.0=r43hc72bb7e_2
   - r-pkgconfig=2.0.3=r43hc72bb7e_4
   - r-prettyunits=1.2.0=r43hc72bb7e_1
@@ -191,6 +192,9 @@ dependencies:
   - r-progress=1.2.3=r43hc72bb7e_1
   - r-ps=1.7.7=r43hdb488b9_0
   - r-purrr=1.0.2=r43hdb488b9_1
+  - r-r.methodss3=1.8.2=r43hc72bb7e_3
+  - r-r.oo=1.26.0=r43hc72bb7e_1
+  - r-r.utils=2.12.3=r43hc72bb7e_1
   - r-r6=2.5.1=r43hc72bb7e_3
   - r-ragg=1.3.2=r43h6bbb899_1
   - r-rappdirs=0.3.3=r43hb1dbf0f_3
