update omega repo

--- a/omega/Dockerfile
+++ b/omega/Dockerfile
@@ -36,10 +36,10 @@ RUN chmod -R 777 /bgdatacache/*
 
 
 # Copy the entire directory from your local machine into the container
-COPY omega ${DOCKER_ROOTFS}/omega
+COPY omega /omega
 
 # Install the Python dependencies listed in the requirements.txt
-RUN pip install -r /omega/requirements.txt
+RUN pip install --default-timeout=100000 -r /omega/requirements.txt
 
 # Install the omega package
 RUN pip install --no-cache-dir /omega
