--- a/deepcsa_core/Dockerfile
+++ b/deepcsa_core/Dockerfile
@@ -8,21 +8,30 @@ LABEL source="https://github.com/bbglab/containers/deepcsa_core"
 
 COPY --chown=$MAMBA_USER:$MAMBA_USER deepcsa.yml /tmp/conda.yml
 
-RUN mkdir -p /home/bgdatacache/
+# Configure matplotlib
+ENV MPLCONFIGDIR=/tmp/matplotlib_config
+RUN mkdir -p "$MPLCONFIGDIR" && chmod -R 777 "$MPLCONFIGDIR"
+
+# Set up BGDATA cache
 ENV BGDATA_LOCAL="/home/bgdatacache"
+RUN mkdir -p $BGDATA_LOCAL
 
 RUN micromamba install -y -n base -f /tmp/conda.yml \
-    # procps-ng is required for nextflow
-    && micromamba install -y -n base conda-forge::procps-ng \ 
+    && micromamba install -y -n base conda-forge::procps-ng \
     && micromamba clean -a -y
 
-USER root
+ENV PATH="$MAMBA_ROOT_PREFIX/bin:$PATH"
 
-RUN export PATH="$MAMBA_ROOT_PREFIX/bin:$PATH" \
-    && bgdata get datasets/genomereference/hg38 \
+USER $MAMBA_USER
+
+# Download genome reference datasets
+RUN bgdata get datasets/genomereference/hg38 \
     && bgdata get datasets/genomereference/mm39
 
-RUN python -c "from bgreference import hg38, mm39; hg38(1, 1300000, 3000),  mm39(1, 1300000, 3000)"
+# Test dataset access with Python
+RUN python -c "from bgreference import hg38, mm39; hg38(1, 1300000, 3000); mm39(1, 1300000, 3000)"
 
+# Set offline mode after downloading
 ENV BGDATA_OFFLINE="True"
-ENV PATH="$MAMBA_ROOT_PREFIX/bin:$PATH"
+
+CMD ["bash"]
